--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,3 +1,10 @@
 .Home {
-    
+    .Header {
+        height: 50px;
+    }
+
+    .Slider {
+        margin-top: 15px;
+        height: 500px;
+    }
 }
