--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,4 +1,6 @@
 .Home {
+    min-height: 100vh;
+    background-color: rgba($color: #000000, $alpha: 0.05);
     .Header {
         height: 50px;
     }
@@ -6,5 +8,16 @@
     .Slider {
         margin-top: 15px;
         height: 500px;
+    }
+
+    .Brands {
+        height: 80px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    .Showcase {
+        height: 250px;
+        margin-top: 10px;
     }
 }
